kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-password-generator
spec:
  selector:
    matchLabels:
      app: flask-password-generator
  template:
    metadata:
      labels:
        app: flask-password-generator
    spec:
      containers:
      - name: flask-password-generator
        image: dturan/flask-password-generator:latest
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
