kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-password-generator
spec:
  selector:
    app: flask-password-generator
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
