kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: flask-password-generator
spec:
  rules:
  - host: cluster.local
    http:
      paths:
      - backend:
          serviceName: flask-password-generator
          servicePort: 8080
        path: /
